@@ -5,6 +5,7 @@ import com.three_csa.argon.Tokenizer.TokenType;
 import com.three_csa.argon.SemAnalyzer.Node.*;
 
 import java.util.HashMap;
+import java.util.InputMismatchException;
 import java.util.List;
 import java.util.Scanner;
 
@@ -13,11 +14,13 @@ public class Interpreter {
     HashMap<String, NumericalVariable> variables;
     Scanner input;
     public Interpreter(HashMap<String, NumericalVariable> variables) {
+
         this.variables = variables;
     }
     public void interpret(StatementsNode root){
         if(root.getChildren() != null){
-            for(ASTNode statement: root.getChildren()){
+            for(int x = 0; x < root.getChildren().size(); x ++){
+                ASTNode statement = root.getChildren().get(x);
                 //laging nahuhuli stderr sa java??
                 switch (statement){
                     case StdioNode p: {
@@ -147,27 +150,39 @@ public class Interpreter {
                         if (loopNode.getLoopType() == LoopType.DISTILL) {
                             do {
                                 interpret((StatementsNode) (loopNode.getChildren().get(1)));
-                            } while ((evaluateBoolean((BooleanNode<?>) loopNode.getChildren().get(0))));
+                            } while (evaluateBoolean((BooleanNode<?>) loopNode.getChildren().get(0).getChildren().get(0)));
                         } else if (loopNode.getLoopType() == LoopType.FERMENT) {
-                            while (evaluateBoolean((BooleanNode<?>) loopNode.getChildren().get(0))) {
+                            while (evaluateBoolean((BooleanNode<?>) loopNode.getChildren().get(0).getChildren().get(0))) {
                                 interpret((StatementsNode) (loopNode.getChildren().get(1)));
                             }
                         }
                     }
                     break;
-//                    case BooleanNode booleanNode: {
-//                        //BooleanValue val = new BooleanValue(false);
-//                        if (booleanNode.getChildren().getFirst() instanceof AssignmentExpressionNode ae){ //not sure about this line
-//                            BooleanNode an = (BooleanNode) ae.getChildren().getFirst();
-//                            val.setValue(evaluateBoolean(an));
-//                        }
-//                    }
+                    case ConditionalNode conditionalNode: {
+                        if(conditionalNode.getExpressionType().equals("FILTER")){
+                            if (evaluateBoolean((BooleanNode<?>) conditionalNode.getChildren().get(0).getChildren().get(0))) {
+                                System.out.println("Entered body");
+                                interpret((StatementsNode) (conditionalNode.getChildren().get(1)));
+                            } else{
+                                if(x+1 < root.getChildren().size() && root.getChildren().get(x+1) instanceof ConditionalNode ce){
+                                    System.out.println("expression type: " + ce.getExpressionType());
+                                    if(ce.getExpressionType().equals("FUNNEL")){
+                                        interpret((StatementsNode) (ce.getChildren().get(0)));
+                                    }
+                                }
+                            }
+                        }else{
+                            continue;
+                        }
+
+                    }
+                    break;
                     default:
-                        System.out.println("LanguageError: unexpected arithmetic expression");
+                        System.out.println("LanguageError: unexpected expression " + statement.getExpressionType());
                         System.exit(1);
                 }
-
             }
+
         }
         if(input != null){
             input.close();
@@ -228,7 +243,12 @@ public class Interpreter {
                 Integer left = evaluateInt((ArithmeticNode<?>) children.get(0));
                 Integer right = evaluateInt((ArithmeticNode<?>) children.get(1));
                 System.out.println(left + " / " + right);
-                return left / right;
+                try {
+                    return left / right;
+                } catch(ArithmeticException ae){
+                    System.out.println("ArithmeticError: " + ae.getMessage());
+                    System.exit(1);
+                }
             }
             if(op == TokenType.EXP){
                 List<ASTNode> children = node.getChildren();
@@ -236,6 +256,35 @@ public class Interpreter {
                 Integer right = evaluateInt((ArithmeticNode<?>) children.get(1));
                 System.out.println(left + " ^ " + right);
                 return (int) Math.pow(left,right);
+            }else if(op == TokenType.INPUT){
+                StdioNode stdio = (StdioNode) node.getChildren().get(0);
+                if(stdio.getIoType() == IoType.INPUT){
+                    StringBuilder sb2 = new StringBuilder();
+                    if(stdio.getChildren() != null){
+                        for(ASTNode innerChild: stdio.getChildren()) {
+                            if (innerChild instanceof ContentNode content) {
+                                if (content.getContentType() == TokenType.STRLIT) {
+                                    sb2.append(content.getContent());
+                                    continue;
+                                }
+                                if(content.getContentType() == TokenType.IDENT){
+                                    sb2.append(variables.get(content.getContent()).getValue());
+                                }
+                            }
+                        }
+                        if(input == null){
+                            input = new Scanner(System.in);
+                        }
+                        System.out.print(sb2);
+                        try{
+                            return input.nextInt();
+                        } catch (InputMismatchException e){
+                            System.out.print("Invalid value " + e.getMessage());
+                            System.exit(1);
+                        }
+                        //input.close();
+                    }
+                }
             }
         }
         System.out.println("LanguageError: Invalid Arithmetic Expression");
@@ -302,7 +351,13 @@ public class Interpreter {
                 Long left = evaluateLong((ArithmeticNode<?>) children.get(0));
                 Long right = evaluateLong((ArithmeticNode<?>) children.get(1));
                 System.out.println(left + " / " + right);
-                return left / right;
+                try {
+                    return left / right;
+                } catch(ArithmeticException ae){
+                    System.out.println("ArithmeticError: " + ae.getMessage());
+                    System.exit(1);
+                }
+
             }
             if(op == TokenType.EXP){
                 List<ASTNode> children = node.getChildren();
@@ -310,6 +365,35 @@ public class Interpreter {
                 Long right = evaluateLong((ArithmeticNode<?>) children.get(1));
                 System.out.println(left + " ^ " + right);
                 return (long) Math.pow(left,right);
+            }else if(op == TokenType.INPUT){
+                StdioNode stdio = (StdioNode) node.getChildren().get(0);
+                if(stdio.getIoType() == IoType.INPUT){
+                    StringBuilder sb2 = new StringBuilder();
+                    if(stdio.getChildren() != null){
+                        for(ASTNode innerChild: stdio.getChildren()) {
+                            if (innerChild instanceof ContentNode content) {
+                                if (content.getContentType() == TokenType.STRLIT) {
+                                    sb2.append(content.getContent());
+                                    continue;
+                                }
+                                if(content.getContentType() == TokenType.IDENT){
+                                    sb2.append(variables.get(content.getContent()).getValue());
+                                }
+                            }
+                        }
+                        if(input == null){
+                            input = new Scanner(System.in);
+                        }
+                        System.out.print(sb2);
+                        try{
+                            return input.nextLong();
+                        }catch (InputMismatchException e){
+                            System.out.print("Invalid value " + e.getMessage());
+                            System.exit(1);
+                        }
+                        //input.close();
+                    }
+                }
             }
         }
         System.out.println("LanguageError: Invalid Arithmetic Expression");
@@ -318,79 +402,81 @@ public class Interpreter {
     }
 
     public boolean evaluateBoolean(BooleanNode<?> node){
-        if(node.getType().equals("True") || node.getType().equals("False")) {
+        if(node.getType().equals("Boolean")) {
             Boolean bool = (Boolean) node.getValue();
+            System.out.println("Bool: " + bool);
             return bool;
         }
-//        if (node.getType().equals("String")) {
-//            String varName = (String) node.getValue();
-//            if(variables.get(varName).getValue() instanceof Boolean varVal){
-//                if(node.isInverted()){
-//                    return (long) -varVal;
-//                }
-//                return (long) varVal;
-//            }
-//        }
         if (node.getType().equals("TokenType")) {
             TokenType op = (TokenType) node.getValue();
             if (op == TokenType.AND) {
                 List<ASTNode> children = node.getChildren();
                 boolean left = evaluateBoolean((BooleanNode<?>) children.get(0));
                 boolean right = evaluateBoolean((BooleanNode<?>) children.get(1));
-                System.out.println(left + "&&" + right);
+                //System.out.println(left + "&&" + right);
                 //return evaluateInt((ArithmeticNode<?>) children.get(1)) - evaluateInt((ArithmeticNode<?>) children.get(0));
                 return left && right;
             } else if (op == TokenType.OR) {
                 List<ASTNode> children = node.getChildren();
                 boolean left = evaluateBoolean((BooleanNode<?>) children.get(0));
                 boolean right = evaluateBoolean((BooleanNode<?>) children.get(1));
-                System.out.println(left + "||" + right);
+                //System.out.println(left + "||" + right);
                 return left || right;
             } else if (op == TokenType.INVERT) {
                 List<ASTNode> children = node.getChildren();
                 boolean left = evaluateBoolean((BooleanNode<?>) children.get(0));
-                System.out.println("!" + left);
+                //System.out.println("!" + left);
                 return !left;
             } else if (op == TokenType.NOT) {
                 List<ASTNode> children = node.getChildren();
                 boolean left = evaluateBoolean((BooleanNode<?>) children.get(0));
                 boolean right = evaluateBoolean((BooleanNode<?>) children.get(1));
-                System.out.println(left + ".is..not." + right);
+                //System.out.println(left + ".is..not." + right);
                 return left != right;
             } else if (op == TokenType.IS) {
                 List<ASTNode> children = node.getChildren();
-                boolean left = evaluateBoolean((BooleanNode<?>) children.get(0));
-                boolean right = evaluateBoolean((BooleanNode<?>) children.get(1));
-                System.out.println(left + ".is." + right);
+                Object left = null;
+                Object right = null;
+                if(children.get(0) instanceof ArithmeticNode<?>){
+                    left = evaluateLong((ArithmeticNode<?>) children.get(0));
+
+                }else if(children.get(0) instanceof BooleanNode<?>){
+                    left = evaluateBoolean((BooleanNode<?>) children.get(0));
+                }
+
+                if(children.get(1) instanceof ArithmeticNode<?>){
+                    right = evaluateLong((ArithmeticNode<?>) children.get(1));
+
+                }else if(children.get(1) instanceof BooleanNode<?>){
+                    right = evaluateBoolean((BooleanNode<?>) children.get(1));
+                }
+                //System.out.println(left + ".is." + right);
                 return left == right;
             } else if (op == TokenType.GT) {
                 List<ASTNode> children = node.getChildren();
-                Integer left = evaluateInt((ArithmeticNode<?>) children.get(0));
-                Integer right = evaluateInt((ArithmeticNode<?>) children.get(1));
-                System.out.println(left + " > " + right);
+                Long left = evaluateLong((ArithmeticNode<?>) children.get(0));
+                Long right = evaluateLong((ArithmeticNode<?>) children.get(1));
+                //System.out.println(left + " > " + right);
                 return left > right;
             } else if (op == TokenType.GTE) {
                 List<ASTNode> children = node.getChildren();
-                Integer left = evaluateInt((ArithmeticNode<?>) children.get(0));
-                Integer right = evaluateInt((ArithmeticNode<?>) children.get(1));
-                System.out.println(left + " >= " + right);
+                Long left = evaluateLong((ArithmeticNode<?>) children.get(0));
+                Long right = evaluateLong((ArithmeticNode<?>) children.get(1));
+                //System.out.println(left + " >= " + right);
                 return left >= right;
             } else if (op == TokenType.LT) {
                 List<ASTNode> children = node.getChildren();
-                Integer left = evaluateInt((ArithmeticNode<?>) children.get(0));
-                Integer right = evaluateInt((ArithmeticNode<?>) children.get(1));
-                System.out.println(left + " < " + right);
+                Long left = evaluateLong((ArithmeticNode<?>) children.get(0));
+                Long right = evaluateLong((ArithmeticNode<?>) children.get(1));
+                //System.out.println(left + " < " + right);
                 return left < right;
             } else if (op == TokenType.LTE) {
                 List<ASTNode> children = node.getChildren();
-                Integer left = evaluateInt((ArithmeticNode<?>) children.get(0));
-                Integer right = evaluateInt((ArithmeticNode<?>) children.get(1));
-                System.out.println(left + " <= " + right);
+                Long left = evaluateLong((ArithmeticNode<?>) children.get(0));
+                Long right = evaluateLong((ArithmeticNode<?>) children.get(1));
+                //System.out.println(left + " <= " + right);
                 return left <= right;
             }
-            int x = 2;
-            long y = 6L;
-            boolean z = y < x && true == true;
         }
         return false;
     }
